Bug 136269 - Calc: Inserting a function - Search bar is not focus by default
Summary: Calc: Inserting a function - Search bar is not focus by default
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
: 136464 136572 136673 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-29 18:20 UTC by BogdanB
Modified: 2020-09-11 19:32 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
video showing the bug (1.39 MB, video/mp4)
2020-08-29 18:22 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2020-08-29 18:20:19 UTC
Description:
Press Fx button. 
Search bar should focus, that I can search for the function I need.
Result Searc bar is not focus. I need to press tab in order to focus.

In version 5.4.7 was focus, so I consider this a regression.

Steps to Reproduce:
1. Open Calc and press Fx (function wizards)


Actual Results:
Search bar for searching bugs is not focus.

Expected Results:
Search bar for searching bugs is focus and I can quickly search for any function.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Repro in
Version: 6.4.5.2
Build ID: a726b36747cf2001e06b58ad5db1aa3a9a1872d6
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded

Don't repro in
Version: 5.4.7.2
Build ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk2; 
Locale: ro-RO (ro_RO.UTF-8); Calc: group
Comment 1 BogdanB 2020-08-29 18:22:45 UTC
Created attachment 164854 [details]
video showing the bug

The focus is on Function tab, but not on Function search bar...
Comment 2 Buovjaga 2020-08-29 18:50:10 UTC
Bibisected with linux-64-6.3 to https://git.libreoffice.org/core/commit/feecbabd01870ed83a04baa6cb13d7a8af832ac3
weld FormulaDialog

drop xFocusWin hack, I don't see what gain it gives

Adding Cc: to Caolán McNamara
Comment 3 Commit Notification 2020-08-31 13:02:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f1b07b9df7b99f2534c5554f73b59baece33d8eb

tdf#136269 give search entry initial focus

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2020-08-31 13:32:55 UTC
done in master, backport to 7-0 in gerrit
Comment 5 Commit Notification 2020-09-01 05:41:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/a3035a228f14f81a3db8cdbf6113edfc1358a616

tdf#136269 give search entry initial focus

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2020-09-04 14:35:49 UTC
Question: For writer should be done the same thing? 
We need another bug?...

See this bug:
https://bugs.documentfoundation.org/show_bug.cgi?id=136464
Comment 7 Caolán McNamara 2020-09-07 12:03:01 UTC
*** Bug 136464 has been marked as a duplicate of this bug. ***
Comment 8 BogdanB 2020-09-08 14:40:40 UTC
*** Bug 136572 has been marked as a duplicate of this bug. ***
Comment 9 BogdanB 2020-09-10 19:43:03 UTC
Verified in
Version: 7.1.0.0.alpha0+
Build ID: 63d4d3421fec5a4e9e88dcee2992cda38cc7452a
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 10 BogdanB 2020-09-11 19:32:05 UTC
*** Bug 136673 has been marked as a duplicate of this bug. ***