tdf#136269 give search entry initial focus

Change-Id: Id1b584341f2819e2fb4528465ee1d42c8f72dec8